.dump/k8s_minikube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service # Nama service yang akan digunakan frontend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  # type: NodePort # Atau ClusterIP jika hanya diakses internal. NodePort untuk akses dari host Minikube.
  type: ClusterIP # Hanya untuk akses internal, jika ingin akses dari luar bisa diubah ke NodePort
